# sshot

./: .gitignore  Cargo.toml  debug_outlines.py  default.nix  flake.nix  result  shell.nix
src/: capture.rs  config.rs  main.rs  overlay.rs  tray.rs
