[package]
name = "sshot"
version = "0.1.0"
edition = "2021"
description = "Wayland screenshot tool for KDE Plasma / NixOS"

[dependencies]
ashpd = { version = "0.11", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
chrono = "0.4"
rand = "0.8"
image = "0.25"
winit = "0.30"
softbuffer = "0.4"
